--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.16.2",
     "forwarded": "^0.1.2",
     "mongodb": "^2.2.33",
-    "unix-timestamp": "^0.2.0"
+    "nc": "^1.0.2",
+    "unix-timestamp": "^0.2.0",
+    "user-agent-parser": "^0.6.0"
   },
   "engines": {
     "node": "8.x"
